# lit-gpt

./: .gitignore  BUILD.bazel  requirements-all.txt
chat/: base.py
finetune/: lora.py
generate/: base.py  predict.py
lit_gpt/: __init__.py  config.py  model.py  utils.py
notebooks/: falcon-inference.ipynb
scripts/: merge_lora.py  prepare_csv.py
