load("@rules_python//python:defs.bzl", "py_library", "py_test")

py_library(
    name = "lgpt",
    srcs = glob([
        "lit_gpt/**/*.py",
    ]),
    visibility = [
        "//ingredient_generation_server/models:__subpackages__",
    ],
    deps = [
        "@pypi_bitsandbytes//:pkg",
        "@pypi_pytorch_lightning//:pkg",
        "@pypi_scipy//:pkg",
        "@pypi_sentencepiece//:pkg",
        "@pypi_tokenizers//:pkg",
        "@pypi_torch//:pkg",
    ],
)

py_test(
    name = "unit-tests",
    srcs = glob([
        "tests/*.py",
    ]),
    main = "tests/test_full.py",
    tags = [
        "block-network",
        "unit",
    ],
    deps = [
        ":lgpt",
        "@pypi_moto//:pkg",
        "@pypi_pytest//:pkg",
    ],
)
